# Solver_fluidos

./: .gitignore  CMakeLists.txt  Campo.cpp  Campo.hpp  LICENSE  README.md  avance.md  condiciones_de_frontera.cpp  condiciones_de_frontera.hpp  config_CF.hpp  config_control.hpp  config_malla.hpp  ecuaciones_gobernantes.cpp  ecuaciones_gobernantes.hpp  escritura.cpp  escritura.hpp  esquemas_de_discretizacion.hpp  factory_method.md  main.cpp  malla_por_bloques.cpp  malla_por_bloques.hpp  solvers_lineales.cpp  solvers_lineales.hpp
include/: Campo.hpp  calculo_del_error.hpp  condiciones_de_frontera.hpp  condiciones_de_frontera_MDot.hpp  conductancia_difusiva.hpp  config_CF.hpp  config_control.hpp  config_control.hpp.bak  config_malla.hpp  convergencia.hpp  correccion_campos.hpp  ecuacion_momentum.hpp  ecuacion_presion.hpp  ecuaciones_gobernantes.hpp  esquemas_de_discretizacion.hpp  flujo_de_masa.hpp  lectura.hpp  logs.hpp  malla_por_bloques.hpp  reasignacion.hpp  solvers_lineales.hpp  utilidades.hpp  variables_discretizacion.hpp
src/: Campo.cpp  calculo_del_error.cpp  condiciones_de_frontera.cpp  condiciones_de_frontera_MDot.cpp  conductancia_difusiva.cpp  convergencia.cpp  correccion_campos.cpp  ecuacion_momentum.cpp  ecuacion_presion.cpp  ecuaciones_gobernantes.cpp  esquemas_de_discretizacion.cpp  flujo_de_masa.cpp  malla_por_bloques.cpp  reasignacion.cpp  variables_discretizacion.cpp
tests/: CMakeLists.txt  a.out  division_entera.cpp  errores.md  for_each.md  getchar.cpp  iota_y_zip.cpp  lectura.cpp  lexer_y_parser.cpp  map.cpp  matriz.cpp  ranges_y_transform.md  simd.cpp  template_specialization.cpp  test_coef_agrup_momentum.cpp  test_flujo_de_masa.cpp  test_laplaciano_lineal.cpp  valor_mayor.cpp
tests/malla_por_bloques_2/: main.cpp  prueba.vtk  todo.txt
